         partial updating of the tape browser (Fred).
20051012 screenshot.c: fix warning in hires byte assignment (Fred).
20051027 snapshot.c: make default snapshot format .szx (Fred).
20051027 display.c: make border changes only apply to the correct mode (e.g.
         loading a tape in hires mode should not show border stripes) (Fred).
20051029 Makefile.am,divide.[ch],machine.c,memory.c,menu.[ch],periph.c,
         settings.dat,ui/options.dat,z80/{coretest.c,z80_ops.c}: initial
         DivIDE implementation (Matthew Westcott).
20051029 divide.h: fix typo in comment.
20051031 divide.[ch],fuse.c,menu.c,menu_data.c,periph.c,settings.dat,ui.c,
	 utils.c: Improved DivIDE emulation: actual connection to IDE
	 devices (Matthew Westcott).
20051224 z80/coretest.c: remove unused variable (Markus Oberhumer).
20051224 autogen.sh: add --automake to libtoolize invocation (Markus
         Oberhumer). Remove --copy from automake invocation.
20060514 widgets/menu.c: allow 'File/Movies/Stop movie recording' to work
	 under the widget UIs (part of bug #1439280) (Gergely Szasz).
20060514 screenshot.c,widgets/menu.c: allow selection of a filename for
	 movie recording under the widget UIs (more of patch #1439280) (Gergely
	 Szasz).
20060515 display.c: Restore hires/standard mixed mode support in borders (Fred).
20060603 sound/sdlsound.c: Add 10ms delay if SDL sound fifo is full (meaning
         we already have a frame worth of sound information built up) to ease
         up on CPU usage (Fred).
20060625 machines/spec_se.c: SE does not have 128 style memory lockout (Fred).
20060625 roms/se-0.rom: Change 3 bytes at 0x240 to XOR A, OUT (00), A instead
         of XOR A, OUT (FF), A to properly reset the SCLD.
20060702 fuse.c: reset AY chip when starting sound (fixes bug #1515666).
20060702 z80/z80.pl: get contention right for EX (SP),HL, EX (SP), IX and
	 EX (SP),IY (thanks, Mark Woodmass).
20060702 z80/z80.pl: swap order of writes in EX (SP),HL and friends (thanks,
	 Mark Woodmass).