@@ -2,7 +2,7 @@
     4 MR 0000 db
     4 MC 0001
     7 MR 0001 e2
-    7 PC c1e2
-   11 PR c1e2 ff
+    8 PR c1e2 ff
+    8 PC c1e2
 ff00 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0002
 00 01 0 0 0 0 11
