@@ -2,7 +2,7 @@
     4 MR 0000 ed
     4 MC 0001
     8 MR 0001 50
-    8 PC bbcc
-   12 PR bbcc ff
+    9 PR bbcc ff
+    9 PC bbcc
 85ac bbcc ffa8 f219 0000 0000 0000 0000 0000 0000 0000 0002
 00 02 0 0 0 0 12
