@@ -2,7 +2,7 @@
     4 MR 0000 ed
     4 MC 0001
     8 MR 0001 51
-    8 PC c0a4
-   12 PW c0a4 53
+    9 PW c0a4 53
+    9 PC c0a4
 2c4c c0a4 5303 bc25 0000 0000 0000 0000 0000 0000 0000 0002
 00 02 0 0 0 0 12
