@@ -2,7 +2,6 @@
     4 MR 0000 ed
     4 MC 0001
     8 MR 0001 69
-    8 PC 8d2f
-   12 PW 8d2f d6
+    9 PW 8d2f d6
 abd8 8d2f 89c7 c3d6 0000 0000 0000 0000 0000 0000 0000 0002
 00 02 0 0 0 0 12
