@@ -2,7 +2,7 @@
     4 MR 0000 ed
     4 MC 0001
     8 MR 0001 70
-    8 PC f7d6
-   12 PR f7d6 ff
+    9 PR f7d6 ff
+    9 PC f7d6
 c6ad f7d6 a3cb 288d 0000 0000 0000 0000 0000 0000 0000 0002
 00 02 0 0 0 0 12
