@@ -2,7 +2,7 @@
     4 MR 0000 ed
     4 MC 0001
     8 MR 0001 78
-    8 PC f206
-   12 PR f206 ff
+    9 PR f206 ff
+    9 PC f206
 ffad f206 2d6a af16 0000 0000 0000 0000 0000 0000 0000 0002
 00 02 0 0 0 0 12
