@@ -5,6 +5,7 @@
     9 MC 32fa
    12 MR 32fa b3
    12 PC 6234
-   16 PW 6234 b3
+   13 PW 6234 b3
+   13 PC 6234
 4222 6234 1e28 32fb 0000 0000 0000 0000 0000 0000 0000 0002
 00 02 0 0 0 0 16
